--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         
         <!-- HERO SECTION -->
         <div id="hero-section">
-            <h1 id="hero-01">Wellcome to Chiang dao</h1>
+            <h1 id="hero-01">Welcome to Chiang dao</h1>
             <h2 id="hero-02">Here you can experient the serinity and rich culture.</h2>
         </div>
         
